Update background image URLs in SCSS files for correct path references

--- a/components/contactModal/_contactModal.scss
+++ b/components/contactModal/_contactModal.scss
@@ -247,15 +247,15 @@
     // }
 
     input[type="text"] {
-      background-image: url("/assets/icons/inputName.svg");
+      background-image: url("./assets/icons/inputName.svg");
     }
 
     input[type="email"] {
-      background-image: url("/assets/icons/inputEmail.svg");
+      background-image: url("./assets/icons/inputEmail.svg");
     }
 
     input[type="tel"] {
-      background-image: url("/assets/icons/inputTel.svg");
+      background-image: url("./assets/icons/inputTel.svg");
     }
   }
 
