--- a/components/legalNotice/_legalNotice.scss
+++ b/components/legalNotice/_legalNotice.scss
@@ -24,12 +24,14 @@
 
   & h1 {
     font-size: 30px;
+    margin-block: 10px;
   }
 
   & h2,
   h3,
   h4 {
     font-size: 20px;
+    margin-block: 10px;
   }
 }
 
