--- a/components/privacyPolicy/_privacyPolicy.scss
+++ b/components/privacyPolicy/_privacyPolicy.scss
@@ -9,12 +9,14 @@
 
   & h1 {
     font-size: 30px;
+    margin-block: 10px;
   }
 
   & h2,
   h3,
   h4 {
     font-size: 20px;
+    margin-block: 10px;
   }
 
   .backArrow {
